[tool.poetry]
name = "Ansible-deploy-gha"
version = "1.5.1"
description = "Python macro deploy."
authors = ["Michael Amadi <amadimicheal212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible = "^10.5"
ansible-lint = "^6.12.1"
pyyaml = "^5.1.2"
jinja2 = "^2.10.3"
python = ">=3.9,<3.11"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"