[tool.poetry]
name = "Ansible-deploy-gha"
version = "1.5.1"
description = "Python macro deploy."
authors = ["Michael Amadi <amadimicheal212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible = ">=2.9"
ansible-lint = {version = "^6.12.1", markers = "platform_system != 'Windows'"}
pyyaml = ">=6.0"
setuptools = ">=42"
wheel = ">=0.36"
jinja2 = "^3.0.0"
python = ">=3.9,<3.11"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"